fix: modal overflow scroll

--- a/task1/client/src/components/EmployeeDetailsModal/EmployeeDetailsModal.scss
+++ b/task1/client/src/components/EmployeeDetailsModal/EmployeeDetailsModal.scss
@@ -10,6 +10,7 @@
 	justify-content: center;
 	align-content: center;
 	background: hsla(219,18%,78%,.5);
+	overflow: scroll;
 
 	.modal-content {
 		padding: 24px;
